# Slashed-Project-1986

./: .gitignore  CMakeLists.txt  patch.diff
config/: server.cfg  settings.cfg
docs/: architecture.md  connection_debug_report.md  getting_started.md  modular_architecture.md  modularization_status.md  modularization_success_report.md
include/engine/: audio.h  camera.h  core.h  ecs.h  game.h  hud.h  input.h  master_protocol.h  master_server.h  math.h  menu.h  network.h  network_master.h  network_server.h  physics.h  platform.h  player.h  preferences.h  renderer.h  resources.h  server_browser.h  settings_menu.h  weapons.h  world.h
src/: main.c
src/core/: application.c  audio.c  camera.c  input.c  math.c  menu.c  preferences.c  server_browser.c
src/ecs/: ecs.c
src/game/: game.c  game.c.bak  hud.c  player.c  server_browser.c  weapons.c  world.c
src/network/: client.c  master_client.c  master_main.c  master_server.c  network.c  server.c  server_main.c
src/physics/: physics.c
src/platform/: window_stub.c  window_win32.c
src/renderer/: renderer.c
src/resources/: loader.c
src/ui/: settings_menu.c
